# esp-idf

./: .gitmodules
components/esp_wifi/include/: esp_coexist.h
components/tinyusb/: CMakeLists.txt
components/tinyusb/additions/include/: tusb_config.h
components/tinyusb/additions/src/: tinyusb.c  usb_descriptors.c
components/usb/: CMakeLists.txt
examples/customer/host/esp32/: CMakeLists.txt  sdkconfig.defaults
examples/customer/host/esp32/components/drivers/: CMakeLists.txt  Kconfig.projbuild  host_serial_bus.c
examples/customer/host/esp32/components/drivers/esp32/sdio/: sdio_host_esp32.c
examples/customer/host/esp32/components/drivers/esp32/sdio/sdio_host_driver/: CMakeLists.txt  component.mk  sdio_host_hal.c
examples/customer/host/esp32/components/drivers/esp32/sdio/sdio_host_driver/include/: sdio_driver_port.h  sdio_host_reg.h
examples/customer/host/esp32/components/drivers/esp32/sdio/sdio_host_driver/port/: sdio_driver_port.c
examples/customer/host/esp32/components/drivers/esp32/sdspi/: sdspi_host_esp32.c
examples/customer/host/esp32/components/drivers/esp32/sdspi/sdspi_host/: CMakeLists.txt
examples/customer/host/esp32/components/drivers/esp32/sdspi_host/: port.c  sdspi_host.c
examples/customer/host/esp32/components/drivers/esp32/sdspi_host/include/: sdspi_host.h
examples/customer/host/esp32/components/drivers/esp32/spi/: spi_master_esp32_series.c  spi_master_esp8266.c
examples/customer/host/esp32/components/drivers/include/: host_config.h  host_serial_bus.h
examples/customer/host/esp32/main/: CLI_Commands.c  CMakeLists.txt  Command_Parse.c  Kconfig.projbuild  dongle_main.c  uart.c  uart.h
examples/customer/host/esp32/main/host_driver/: platform_wrapper.c
examples/customer/host/esp32/main/host_driver/include/: netdev_api.h  netdev_stub.h  sdspi_drv.h  serial_drv.h  serial_if.h
examples/customer/host/esp32/main/host_driver/net/: netdev_api.c  netdev_stub.c
examples/customer/host/esp32/main/host_driver/sdspi_driver/: sdspi_drv.c
examples/customer/host/esp32/main/host_driver/serial/: serial_if.c
examples/customer/host/esp32/main/host_driver/wifi/: CMakeLists.txt  component.mk
examples/customer/host/esp32/main/host_driver/wifi/include/: esp_host_pkt.h  host_netif.h  host_wifi_default.h  host_wifi_netif.h
examples/customer/host/esp32/main/host_driver/wifi/src/: esp_host_pkt.c  host_wifi_default.c  host_wifi_netif.c
examples/peripherals/usb/tusb_serial_device_dual/: CMakeLists.txt
examples/peripherals/usb/usb_rndis_just_have_rndis/: CMakeLists.txt
(+21 files in other folders)
